# audioio

./: .gitignore  .mkdocs.yml  .travis.yml  404.html  README.md  audioformats.py  audiomodules.py  build-docs.sh  index.html  installation.html  pyproject.toml  requirements.txt  search.html  setup.py
api/: audioconverter.html  audioloader.html  audiomarkers.html  audiometadata.html  audiomodules.html  audiotools.html  audiowriter.html  bufferedarray.html  fixtimestamps.html  index.html  playaudio.html  riffmetadata.html  version.html
audioio/: __init__.py  audioconverter.py  audioloader.py  audiomarkers.py  audiometadata.py  audiomodules.py  audiotools.py  audiowriter.py  metadata.py  playaudio.py  riffmetadata.py  version.py  wavemetadata.py
cover/: class_index.html  d_d7c50bdfb159b466___init___py.html  d_d7c50bdfb159b466_audioconverter_py.html  d_d7c50bdfb159b466_audioloader_py.html  d_d7c50bdfb159b466_audiomarkers_py.html  d_d7c50bdfb159b466_audiometadata_py.html  d_d7c50bdfb159b466_audiomodules_py.html  d_d7c50bdfb159b466_audiotools_py.html  d_d7c50bdfb159b466_audiowriter_py.html  d_d7c50bdfb159b466_playaudio_py.html  d_d7c50bdfb159b466_riffmetadata_py.html  d_d7c50bdfb159b466_version_py.html  function_index.html  index.html  status.json  z_811f234f2302e292___init___py.html  z_811f234f2302e292_audioconverter_py.html  z_811f234f2302e292_audioloader_py.html  z_811f234f2302e292_audiomarkers_py.html  z_811f234f2302e292_audiometadata_py.html  z_811f234f2302e292_audiomodules_py.html  z_811f234f2302e292_audiotools_py.html  z_811f234f2302e292_audiowriter_py.html  z_811f234f2302e292_bufferedarray_py.html  z_811f234f2302e292_fixtimestamps_py.html  z_811f234f2302e292_playaudio_py.html  (+2 more)
docs/: build.sh  index.md  (+1 more)
(+34 files in other folders)
